# API-Police

./: .gitignore  GITHUB_PUBLISH_GUIDE.md  README.md  pyproject.toml  readme_zh.md  report.json
api_police/: __init__.py  analyzer.py  batch_calibrate.py  calibrator.py  cli.py  client.py  constants.py  report.py  runner.py
api_police/testers/: __init__.py  base.py  behavior.py  capability.py  direct_probe.py  identity.py  knowledge.py  logprobs.py  magic_string.py  performance.py  tokenizer.py
tests/: test_batch_calibrate.py  test_calibrator.py  test_cli.py  test_client.py  test_report.py  test_runner.py
tests/testers/: __init__.py  test_capability.py  test_identity.py  test_knowledge.py  test_magic_string.py
